--- a/index.html
+++ b/index.html
@@ -14,14 +14,19 @@
 </head>
 
 <body>
-    <div class="header"></div>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-4 offset-sm-4 col-12">
+                <div id="header"" class="header"></div>
+                
 
-    <button class="btn" id="button"></button>
-
-    <div class="container"></div>
+                <div id="grid" class="container"></div>
 
 
-
+                <div id="footer"" class="footer"></div>
+            </div>
+        </div>
+    </div>
 
 
 
