--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div id="header"" class="header"></div>
                 
 
-                <div id="grid" class="container"></div>
+                <div id="grid" class="container col-sm-4"></div>
 
 
                 <div id="footer"" class="footer"></div>
