--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container  ">
         <div class="row">
             <div class="col-sm-4 offset-sm-4 col-12">
                 <div id="header"" class="header"></div>
                 
 
-                <div id="grid" class="container"></div>
+                <div id="grid" class="container d-small-flex"></div>
 
 
                 <div id="footer"" class="footer"></div>
